# cad

./: Cargo.toml  model.json  model2.json  model3.json
src/backend/: Cargo.toml
src/backend/src/: app_state.rs  backend.rs  lib.rs
src/backend/src/cqrs/: add_torus.rs  cqrs.rs  mod.rs  new_id.rs  point_details.rs  select_objects.rs  torus_details.rs  transform_point.rs  transform_torus.rs  update_torus.rs  update_transformer.rs
src/backend/src/cqrs/beziers_c0/: add_bezier_c0.rs  add_point_to_bezier_c0.rs  all_beziers_c0.rs  (+6 more)
src/backend/src/data_access/: storage.rs
src/backend/src/domain/: bezier_c0.rs  bezier_c2.rs  bezier_int.rs  cursor.rs  gregory.rs  intersection.rs  intersection_object.rs  mesh.rs  mod.rs  point.rs  selected_object.rs  surface_c0.rs  surface_c2.rs  torus.rs  transformer.rs  vertex.rs
src/backend/src/extensions/: iterator_extensions.rs  mod.rs
src/backend/src/processes/: mod.rs
src/backend/src/services/: create_surface.rs  event_publisher.rs  id_generator.rs  mod.rs  services.rs
src/user_interface/: Cargo.toml
src/user_interface/src/: lib.rs  object.rs  object_id.rs  text_buffers.rs  torus.rs  typed_text_buffer.rs  ui.rs  ui_addition_panel.rs  ui_selection_panel.rs  ui_transformation_panel.rs
src/user_interface/src/domain/: bezier_c0.rs  bezier_c2.rs  bezier_int.rs  gregory.rs  intersection.rs  mod.rs
src/user_interface/src/popups/: add_surface_c0_popup.rs  add_surface_c2_popup.rs  find_intersection_popup.rs  find_self_intersection_popup.rs  mod.rs  popup.rs
src/user_interface/src/processes/: fetch_objects_on_scene_loaded.rs  fetch_objects_on_selected_points_merged.rs  mod.rs  selected_surface_c0_points_on_surface_c0_points_selected.rs  selected_surface_c2_points_on_surface_c2_points_selected.rs  sync_bezier_c0_with_backend.rs  sync_bezier_c2_with_backend.rs  sync_bezier_int_with_backend.rs  sync_greogry_with_backend.rs  sync_intersection_with_backend.rs  sync_point_with_backend.rs
(+299 files in other folders)
