[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.33"
itertools = "0.12.1"

math = { path = "../math" }
infrastructure = { path = "../infrastructure" }
backend_events = { path = "../backend_events" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
