[package]
name = "user_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
egui = "0.23.0"
itertools = "0.12.1"

backend = { path = "../backend" }
backend_events = { path = "../backend_events" }
math = { path = "../math" }
infrastructure = { path = "../infrastructure" }
